Bug 149803 - FILESAVE PPTX Use background fill property not saved for all shapes
Summary: FILESAVE PPTX Use background fill property not saved for all shapes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: PPTX-Shapes
  Show dependency treegraph
 
Reported: 2022-07-01 09:21 UTC by Gabor Kelemen (Collabora)
Modified: 2022-11-28 14:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of attachment 155025 and its Impress-saved version in Impress (274.47 KB, image/png)
2022-07-01 09:21 UTC, Gabor Kelemen (Collabora)
Details
The example file saved as PPTX (25.18 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-07-01 09:22 UTC, Gabor Kelemen (Collabora)
Details
attachment 130845 saved by Impress (1.38 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-07-01 09:33 UTC, Gabor Kelemen (Collabora)
Details
attachment 130845 and its Impress-saved version reopened (342.14 KB, image/png)
2022-07-01 09:34 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of attachment 130205 and its Impress-saved version (201.15 KB, image/png)
2022-07-01 09:55 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-07-01 09:21:24 UTC
Created attachment 181057 [details]
Screenshot of attachment 155025 [details] and its Impress-saved version in Impress

After fixes in bug 128150 the UseBgFill property of shapes can be saved to PPTX, for example in attachment 178732 [details] of bug 147852 it is correctly retained.

However the rounded corner shape in attachment 155025 [details] of 128150 loses this property and reverts to None fill after saving to PPTX.

1, Open attachment 155025 [details] 
2, Save as PPTX, reload

The text is not readable, because the rounded corner shape no longer has the use background fill property set. This would have produced the dark background for the white text in the foreground textbox.

attachment 130845 [details] from bug 105695 is also affected.

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 8f9fd6806ccfbf381a383efe5d143ead86ee49de
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2022-07-01 09:22:37 UTC
Created attachment 181058 [details]
The example file saved as PPTX
Comment 2 Gabor Kelemen (Collabora) 2022-07-01 09:33:59 UTC
Created attachment 181059 [details]
attachment 130845 [details] saved by Impress
Comment 3 Gabor Kelemen (Collabora) 2022-07-01 09:34:52 UTC
Created attachment 181060 [details]
attachment 130845 [details] and its Impress-saved version reopened

Note the Area section in sidebar
Comment 4 Gabor Kelemen (Collabora) 2022-07-01 09:55:35 UTC
Created attachment 181061 [details]
Screenshot of attachment 130205 [details] and its Impress-saved version

attachment 130205 [details] from 105150 is also affected. Probably easiest to debug with this, since its a tiny example file.
Comment 5 Commit Notification 2022-11-21 09:05:50 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab10008ecaa33228838115a0b714e4f118c07ac1

tdf#149803 tdf#128150 PPTX: export UseBgFill of custom shapes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2022-11-22 09:58:56 UTC
Verified with 

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5116d6ad85d804e7b7897bc57a4a4bf9d5bed4f1
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

All 3 mentioned example files survive the PPTX roundtrip with keeping the "Use Silde Background" property. Also looks good in PP 2016.

Thanks for fixing this!
Comment 7 Commit Notification 2022-11-25 09:05:55 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/869e9e0dfe1cf7f263994468d5c3604b9c9c86c6

tdf#149803 tdf#128150 PPTX: export UseBgFill of custom shapes

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2022-11-28 14:49:27 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded