tdf#149803 tdf#128150 PPTX: export UseBgFill of custom shapes

Fixing tdf#128150 the UseBgFill property of shapes can
be saved to PPTX, but not in the case of custom shapes.

Follow-up to commits c4cf2e82e8d0aaef9b1daedc033d6edf647e5284
(tdf#128150 Add OOXML import/export for "use background fill"),
commit 50394abcc36a73c0205e6cb69d925c66c25f81f2,
(tdf#128150 Implement/add SlideBackgroundFill visualization") and
commit	9c2c48f14535e58cad0453fef584400ee703aecc
"tdf#128150 xmloff: ODF import/export of fill-use-slide-background".

Change-Id: Ib88f236d2533ef71ea66718d380e83d9a0685c3e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142489
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143029
Tested-by: Jenkins